--- a/pregunta1.html
+++ b/pregunta1.html
@@ -3,6 +3,7 @@
 <title>PREGUNTA 1</title>
 </head>
 <h1>PREGUNTA 1 </h1>
+<h1>Pregunta 1.1 </h1>
 <body>
 <form method="POST" action="pregunta1.php">
 Ingrese un conjunto de datos:<br><br>
