--- a/pregunta1.html
+++ b/pregunta1.html
@@ -7,6 +7,7 @@
 <body>
 <form method="POST" action="pregunta1.php">
 Ingrese un conjunto de datos:<br><br>
+Los datos a ingresar deben ser mayores a 0 <br>
 <textarea rows="2" cols="20" name="x">
 </textarea>
 </form>
